Update prepare_cb0s.sh